--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,7 @@
 fixtures:
   repositories:
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib.git"
+    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib"
     alternatives: "git://github.com/puppet-community/puppet-alternatives"
-    hadoop_lib: "git://github.com/valtri/cesnet-hadoop_lib"
+    hadoop_lib: "https://github.com/valtri/cesnet-hadoop_lib"
   symlinks:
     hue: "#{source_dir}"
