--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,7 +1,13 @@
 fixtures:
   repositories:
-    stdlib: "git://github.com/puppetlabs/puppetlabs-stdlib"
-    alternatives: "git://github.com/puppet-community/puppet-alternatives"
+    stdlib:
+      repo: "https://github.com/puppetlabs/puppetlabs-stdlib"
+      # for future parser tests with puppet < 4
+      ref: "4.25.1"
+    alternatives:
+      repo: "https://github.com/voxpupuli/puppet-alternatives"
+      # ruby 1.9.3 compatibility
+      ref: "v3.0.0"
     hadoop_lib: "https://github.com/MetaCenterCloudPuppet/cesnet-hadoop_lib"
   symlinks:
     hue: "#{source_dir}"
